processed/jira/txt/LU/LU-19151.txt
Key:        LU-19151
Summary:    Fix fortify build issue Ubuntu 25.04 / v6.11.29
Link:       https://jira.whamcloud.com/browse/LU-19151
Type:       Bug
Priority:   Medium
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Wed, 2 Jul 2025 05:01:43 +0000
Updated:    Wed, 20 Aug 2025 11:26:49 +0000
Resolved:   Wed, 20 Aug 2025 11:26:49 +0000

--- Description ---
Ubuntu 6.11, gcc-14.2

/home/shaun/lustre-release/lustre/llite/file.c: In function ‘ll_intent_file_open’:
./include/linux/fortify-string.h:114:33: error: ‘__builtin_memcpy’ accessing 18446744073709551614 bytes at offsets 0 and 0 overlaps 9223372036854775805 bytes at offset -9223372036854775807 [-Werror=restrict]
  114 | #define __underlying_memcpy     __builtin_memcpy
      |                                 ^
./include/linux/fortify-string.h:633:9: note: in expansion of macro ‘__underlying_memcpy’
  633 |         __underlying_##op(p, q, __fortify_size);                        \
      |         ^~~~~~~~~~~~~
./include/linux/fortify-string.h:678:26: note: in expansion of macro ‘__fortify_memcpy_chk’
  678 | #define memcpy(p, q, s)  __fortify_memcpy_chk(p, q, s,                  \
      |                          ^~~~~~~~~~~~~~~~~~~~
/home/shaun/lustre-release/lustre/llite/file.c:738:17: note: in expansion of macro ‘memcpy’
  738 |                 memcpy(name, de->d_name.name, len);
      |                 ^~~~~~
cc1: all warnings being treated as errors

--- Comment (pjones, Wed, 20 Aug 2025 11:26:49 +0000) ---
Merged for 2.17

--- Comment (gerrit, Wed, 20 Aug 2025 03:05:07 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/60007/

Subject: LU-19151 build: fortify memcpy dentry len

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 84077945ce263b68bd25ff2a0e111563b5514cf3

--- Comment (gerrit, Wed, 2 Jul 2025 05:58:56 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/60007

Subject: LU-19151 build: fortify memcpy dentry len

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 73ac8ea80f1936b751d5f3e26f8fd0b3e650fdc6
